--- a/client/src/styles/components/_friendsHint.scss
+++ b/client/src/styles/components/_friendsHint.scss
@@ -1,12 +1,12 @@
 .get-friends-container {
   width: 356px;
-  background: linear-gradient(145deg, $color-2 30%, #ffe1d9 100%);
+  background: linear-gradient(145deg, rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0.5) 100%);
   border-radius: 20px;
   padding: 20px 20px 10px;
 
   h4 {
     font-size: 1.4rem;
-    color: $color-3;
+    color: $white;
   }
   .icon {
     margin: 16px auto;
@@ -14,7 +14,7 @@
     text-align: center;
     i {
       font-size: 1.6rem;
-      color: $color-3;
+      color: $white;
     }
   }
   ul {
@@ -52,7 +52,7 @@
 
           &:hover {
             background: $color-4;
-            color: $color-1;
+            color: $white;
           }
         }
       }
