--- a/client/src/styles/_settings.scss
+++ b/client/src/styles/_settings.scss
@@ -16,9 +16,9 @@ $font-2: "font-2", serif;
 $font-3: "font-3", serif;
 
 $color-1: #ff7b77;
-$color-2: #ffd0c4;
+$color-2: rgba(255, 255, 255,0.3);
 $color-3: rgb(0, 22, 44);
-$color-4: #fdeeee;
+$color-4: rgba(13, 25, 2,0.7);
 $black: rgb(40, 40, 40);
 $white: rgb(253, 253, 253);
 $shadow: rgb(219, 218, 218);
@@ -56,7 +56,7 @@ textarea {
 button,
 input[type="submit"] {
   background: $color-2;
-  color: $color-1;
+  color: $color-2;
   font-family: $font-3;
   cursor: pointer;
   transition: 0.2s;
@@ -68,7 +68,7 @@ input[type="submit"] {
 
   &:hover {
     background: $color-1;
-    color: $color-2;
+    color: black;
   }
 }
 input[type="checkbox"] {
@@ -86,8 +86,9 @@ i {
 body {
   font-family: $font-2;
   line-height: 1.4rem;
-  background: $white;
-  color: $color-3;
+  background: $color-4;
+  color: $white;
+
 }
 .error {
   color: red;
