--- a/client/src/styles/components/_card.scss
+++ b/client/src/styles/components/_card.scss
@@ -347,6 +347,7 @@
     }
     .comment-form {
       margin-top: 6px;
+      
 
       input[type="text"] {
         width: 100%;
@@ -354,6 +355,7 @@
         border-radius: 20px 20px 6px 20px;
         padding: 20px;
         font-size: 1.4rem;
+        color: white;
 
         &:focus {
           box-shadow: 0 0 2px rgba(51, 51, 51, 0.5);
