--- a/client/src/styles/components/_trends.scss
+++ b/client/src/styles/components/_trends.scss
@@ -1,13 +1,14 @@
 .trending-container {
-  background: $color-2;
+  background: rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   margin-bottom: 14px;
   padding: 20px;
   width: 356px;
+  
 
   h4 {
     font-size: 1.4rem;
-    color: $color-3;
+    color: $white;
     margin-bottom: 12px;
   }
   ul {
@@ -20,7 +21,7 @@
       background: $color-4;
       border-radius: 20px;
       padding: 16px;
-      box-shadow: 5px 7px 20px 9px #ff7c7732;
+      box-shadow: 5px 7px 20px 9px $color-4;
       transition: .2s;
 
       &:hover {
@@ -49,6 +50,7 @@
           -webkit-line-clamp: 2;
           overflow: hidden;
           font-size: .9rem;
+          color:$white
         }
         span {
           color: $color-1;
