--- a/client/src/styles/pages/_home.scss
+++ b/client/src/styles/pages/_home.scss
@@ -21,10 +21,13 @@
       margin: 0 auto 12px;
       text-align: center;
       
+      
+      
       .connection-form {
-        background: $color-4;
+        background: rgba( 0,0,0, 0.2 );
         border-radius: 20px;
         padding: 20px;
+    
 
         ul {
           display: flex;
