--- a/client/src/styles/_settings.scss
+++ b/client/src/styles/_settings.scss
@@ -33,12 +33,12 @@ $shadow: rgb(219, 218, 218);
   text-decoration: none;
 
   &::selection {
-    background: $color-1;
+    background: $color-4;
   }
 }
 a,
 a:visited {
-  color: $color-3;
+  color: $color-1;
 }
 input,
 textarea {
@@ -97,4 +97,8 @@ body {
 .success {
   color: green;
   font-weight: bold;
+}
+
+.text-black{
+  color: black;
 }
