--- a/client/src/styles/pages/_profil.scss
+++ b/client/src/styles/pages/_profil.scss
@@ -164,7 +164,7 @@
           position: absolute;
           transform: translate(-50%, -50%);
           width: 270px;
-          background: $color-3;
+          background: $color-2;
           color: $color-2;
           border-radius: 20px;
           display: inline-block;
@@ -172,10 +172,15 @@
           transition: 0.2s;
           z-index: 10;
           cursor: pointer;
+          &:hover {
+            background:$color-1;
+            color:$color-3;
+          }
         }
+        
         input[type="file"] {
           position: absolute;
-          opacity: 1;
+          opacity: 0;
           transform: translate(-3px, -50%);
           cursor: pointer;
           padding: 10px 20px;
