--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -1,5 +1,5 @@
 nav {
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 45px;
   border-radius: 6px;
@@ -19,7 +19,7 @@ nav {
     top:0;
     position: absolute;
     backdrop-filter: blur(3px);
-    background: rgba(255, 255, 255, 0.86);
+    background: rgba(255, 255, 255, 0);
     z-index: -8;
   }
 
@@ -45,6 +45,9 @@ nav {
         height: 26px;
         width: 26px;
       }
+      a{
+        color: $white;
+      }
     }
     
     ul {
@@ -64,6 +67,9 @@ nav {
         
         h5 {
           font-family: $font-3;
+        }
+        a{
+          color: $white;
         }
       }
       
