--- a/client/src/styles/_settings.scss
+++ b/client/src/styles/_settings.scss
@@ -23,6 +23,10 @@ $black: rgb(40, 40, 40);
 $white: rgb(253, 253, 253);
 $shadow: rgb(219, 218, 218);
 
+#root{
+  overflow-x: hidden;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -88,6 +92,9 @@ body {
   line-height: 1.4rem;
   background: $color-4;
   color: $white;
+  overflow-x: hidden;
+ 
+ 
 
 }
 .error {
